new image creation method

--- a/NeuralNetTrain/ee_import.ipynb
+++ b/NeuralNetTrain/ee_import.ipynb
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "eA5AhCi0KFdG",
         "colab_type": "code",
-        "outputId": "bfd8f5d7-b054-49cf-d916-38a31c2184f9",
+        "outputId": "1a8c8773-6915-4fd7-a06f-1290680dc935",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 230
@@ -104,23 +104,23 @@
         "%cd /content/master_thesis_code\n",
         "!git pull"
       ],
-      "execution_count": 8,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/content/master_thesis_code\n",
-            "remote: Enumerating objects: 14, done.\u001b[K\n",
-            "remote: Counting objects: 100% (14/14), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
-            "remote: Total 10 (delta 5), reused 10 (delta 5), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (10/10), done.\n",
+            "remote: Enumerating objects: 9, done.\u001b[K\n",
+            "remote: Counting objects: 100% (9/9), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (2/2), done.\u001b[K\n",
+            "remote: Total 5 (delta 3), reused 5 (delta 3), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (5/5), done.\n",
             "From https://github.com/maxjonasbehrens/master_thesis_code\n",
-            "   4161480..3bd8f54  master     -> origin/master\n",
-            "Updating 4161480..3bd8f54\n",
+            "   eb2d7bb..677e357  master     -> origin/master\n",
+            "Updating eb2d7bb..677e357\n",
             "Fast-forward\n",
-            " NeuralNetTrain/imgProcessing/sat_images.py | 143 \u001b[32m++++++++++++++++++++++++++++\u001b[m\u001b[31m-\u001b[m\n",
-            " 1 file changed, 142 insertions(+), 1 deletion(-)\n"
+            " NeuralNetTrain/imgProcessing/sat_images.py | 5 \u001b[32m+++\u001b[m\u001b[31m--\u001b[m\n",
+            " 1 file changed, 3 insertions(+), 2 deletions(-)\n"
           ],
           "name": "stdout"
         }
@@ -214,7 +214,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "vGEELO3uujS5",
-        "outputId": "db3ddd14-2095-4a36-936a-6aaa8f8fba76",
+        "outputId": "5d4b4161-6b95-4a31-cbcf-f00442ffcfc5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -224,7 +224,7 @@
         "# Print its shape\n",
         "print(\"Image shape: \",img.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,15 +240,33 @@
       "metadata": {
         "colab_type": "code",
         "id": "KAh7NFewVrKe",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8de57f3a-e9ba-4fe2-b16c-7843849c9611"
       },
       "source": [
         "# Resize original image to compatible size\n",
         "img = np.swapaxes(img,0,-1)\n",
-        "orig_resized = resize(img, (1024,1024))"
+        "orig_resized = resize(img, (1024,1024))\n",
+        "orig_resized.shape"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1024, 1024, 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -336,7 +354,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "1NURzseNL_yH",
-        "outputId": "87f967d8-2803-4a9f-ed38-73acf51d80c5",
+        "outputId": "2e3e70e4-c67b-4faf-e6ae-1dad81eea323",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -347,7 +365,7 @@
         "y_dat = pd.read_csv(\"/gdrive/My Drive/ThesisData/Data/enhanced_gdp_data.csv\")\n",
         "y_dat.head()"
       ],
-      "execution_count": 12,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,7 +473,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 24
         }
       ]
     },
@@ -491,210 +509,43 @@
       "metadata": {
         "colab_type": "code",
         "id": "Ogm4ndTFkrib",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 506
+        },
+        "outputId": "1b416a30-2e2f-4673-e1aa-4a8644b12eb2"
       },
       "source": [
         "# List of all files in directory of images\n",
         "mypath = \"/gdrive/My Drive/nuts_night/\"\n",
         "mypath_day = \"/gdrive/My Drive/nuts_geotiff/\"\n",
-        "onlyfiles = [f for f in listdir(mypath) if isfile(join(mypath, f))]"
+        "sat_images.create_save_data(mypath,y_dat,alt_path=mypath_day,prediction='nuts_value',kind='merge',resolution=128,night=False)"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "LHq0y4SCsQFp",
-        "colab": {}
-      },
-      "source": [
-        "# PreProcess images with certain resolution\n",
-        "res = 64\n",
-        "x,y,label = sat_images.create_data(onlyfiles[1:],mypath_day,y_dat,prediction='nuts_value',replace_nan='mean',resolution=res,night=False)\n",
-        "scipy.io.savemat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_64_merge.mat\", mdict={'x': x}, oned_as='row')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "h3sKahqFojC3",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Random data splitting finished.\n",
+            "Image processed:  0  of  691\n"
+          ],
+          "name": "stdout"
         },
-        "outputId": "a17940c0-51ab-4679-e40a-6c16b2d41044"
-      },
-      "source": [
-        "# PreProcess subsample data from raw images\n",
-        "res = 64\n",
-        "y_dat = pd.read_csv(\"/gdrive/My Drive/ThesisData/Data/enhanced_gdp_data.csv\")\n",
-        "mypath = \"/gdrive/My Drive/nuts_day_raw/\"\n",
-        "onlyfiles = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
-        "x,y,label = sat_images.create_sample_data(onlyfiles,mypath,y_dat,resolution=res)"
-      ],
-      "execution_count": 0,
-      "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Image processed:  0  of  127\n",
-            "Image processed:  10  of  127\n",
-            "Image processed:  20  of  127\n",
-            "Image processed:  30  of  127\n",
-            "Image processed:  40  of  127\n",
-            "Image processed:  50  of  127\n",
-            "Image processed:  60  of  127\n",
-            "Image processed:  70  of  127\n",
-            "Image processed:  80  of  127\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "B6qu1pX-o0EK",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "x.tofile\n",
-        "y.tofile\n",
-        "label.tofile"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SKMXwstd9_Py",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Save NIGHT images"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "efIlhYNkwutL",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Save ndarray to reproduce in drive for NIGHT images\n",
-        "scipy.io.savemat(\"/gdrive/My Drive/ThesisData/Data/data_night_mean_64.mat\", mdict={'x': x}, oned_as='row')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0flpYjXJ-IFs",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Save DAY images"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aGiuo5tw-HFb",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Save ndarray to reproduce in drive for DAY images\n",
-        "scipy.io.savemat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_64.mat\", mdict={'x': x}, oned_as='row')\n",
-        "#scipy.io.savemat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_512_2.mat\", mdict={'x': x[600:]}, oned_as='row')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "OgjMrcIH5H5o",
-        "colab": {}
-      },
-      "source": [
-        "# Load input from scratch\n",
-        "\n",
-        "# For DAY images\n",
-        "#x = np.vstack((scipy.io.loadmat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_512_1.mat\")['x'],scipy.io.loadmat(\"/gdrive/My Drive/ThesisData/Data/data_day_mean_512_2.mat\")['x']))\n",
-        "\n",
-        "# For NIGHT images\n",
-        "x = scipy.io.loadmat(\"/gdrive/My Drive/ThesisData/Data/data_night_mean_512.mat\")['x']\n",
-        "\n",
-        "y, label = sat_images.create_y_label(onlyfiles,mypath,y_dat,prediction='nuts_value')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "4si-J7h9JBa7",
-        "outputId": "6faae17d-ac52-494e-99f3-b2be9e74bd68",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        }
-      },
-      "source": [
-        "# Print shape of images\n",
-        "print('Shape of x: ',len(x))\n",
-        "print('Shape of y: ',len(y))\n",
-        "print('Shape of labels: ', len(label))"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Shape of x:  692\n",
-            "Shape of y:  692\n",
-            "Shape of labels:  692\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9ae7iGkBO_EN",
-        "colab_type": "code",
-        "outputId": "fb3b6a0a-e8e6-4df2-cde1-62da8707b32b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "# Convert grayscale 1-channel to 3-channel (only for transfer learning)\n",
-        "x = np.stack((x,)*3, axis=-1)\n",
-        "print(x.shape)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(692, 512, 512, 3)\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "AxisError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-63-1fda967a6a9a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmypath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/gdrive/My Drive/nuts_night/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmypath_day\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/gdrive/My Drive/nuts_geotiff/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msat_images\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_save_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmypath\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_dat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0malt_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmypath_day\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprediction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'nuts_value'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'merge'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresolution\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<string>\u001b[0m in \u001b[0;36mcreate_save_data\u001b[0;34m(path, y_dat, prediction, kind, alt_path, replace_nan, resolution, night, test_size)\u001b[0m\n",
+            "\u001b[0;32m<string>\u001b[0m in \u001b[0;36mprocess_merged_image\u001b[0;34m(img_day, img_night, region_type, region, year, y)\u001b[0m\n",
+            "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mappend\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/numpy/lib/function_base.py\u001b[0m in \u001b[0;36mappend\u001b[0;34m(arr, values, axis)\u001b[0m\n\u001b[1;32m   4698\u001b[0m         \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4699\u001b[0m         \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4700\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4701\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4702\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+            "\u001b[0;31mAxisError\u001b[0m: axis 2 is out of bounds for array of dimension 2"
+          ]
         }
       ]
     },
