--- a/CleanExploreData/time_series_analysis.ipynb
+++ b/CleanExploreData/time_series_analysis.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>2014</th>\n      <th>2015</th>\n      <th>2016</th>\n      <th>2017</th>\n      <th>nuts2</th>\n      <th>code</th>\n      <th>country</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>61700.0</td>\n      <td>63100.0</td>\n      <td>64200.0</td>\n      <td>65000.0</td>\n      <td>BE10</td>\n      <td>BE</td>\n      <td>Belgium</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>61700.0</td>\n      <td>63100.0</td>\n      <td>64200.0</td>\n      <td>65000.0</td>\n      <td>BE10</td>\n      <td>BE</td>\n      <td>Belgium</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>61700.0</td>\n      <td>63100.0</td>\n      <td>64200.0</td>\n      <td>65000.0</td>\n      <td>BE10</td>\n      <td>BE</td>\n      <td>Belgium</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>61700.0</td>\n      <td>63100.0</td>\n      <td>64200.0</td>\n      <td>65000.0</td>\n      <td>BE10</td>\n      <td>BE</td>\n      <td>Belgium</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>61700.0</td>\n      <td>63100.0</td>\n      <td>64200.0</td>\n      <td>65000.0</td>\n      <td>BE10</td>\n      <td>BE</td>\n      <td>Belgium</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "      2014     2015     2016     2017 nuts2 code  country\n0  61700.0  63100.0  64200.0  65000.0  BE10   BE  Belgium\n1  61700.0  63100.0  64200.0  65000.0  BE10   BE  Belgium\n2  61700.0  63100.0  64200.0  65000.0  BE10   BE  Belgium\n3  61700.0  63100.0  64200.0  65000.0  BE10   BE  Belgium\n4  61700.0  63100.0  64200.0  65000.0  BE10   BE  Belgium"
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>nuts2</th>\n      <th>code</th>\n      <th>country</th>\n      <th>diff_1415</th>\n      <th>diff_1516</th>\n      <th>diff_1617</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>BE10</td>\n      <td>BE</td>\n      <td>Belgium</td>\n      <td>1400.0</td>\n      <td>1100.0</td>\n      <td>800.0</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>BE21</td>\n      <td>BE</td>\n      <td>Belgium</td>\n      <td>1100.0</td>\n      <td>1400.0</td>\n      <td>1800.0</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>BE22</td>\n      <td>BE</td>\n      <td>Belgium</td>\n      <td>200.0</td>\n      <td>800.0</td>\n      <td>1200.0</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>BE23</td>\n      <td>BE</td>\n      <td>Belgium</td>\n      <td>1100.0</td>\n      <td>1000.0</td>\n      <td>1100.0</td>\n    </tr>\n    <tr>\n      <th>40</th>\n      <td>BE24</td>\n      <td>BE</td>\n      <td>Belgium</td>\n      <td>900.0</td>\n      <td>1300.0</td>\n      <td>800.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "   nuts2 code  country  diff_1415  diff_1516  diff_1617\n0   BE10   BE  Belgium     1400.0     1100.0      800.0\n10  BE21   BE  Belgium     1100.0     1400.0     1800.0\n20  BE22   BE  Belgium      200.0      800.0     1200.0\n30  BE23   BE  Belgium     1100.0     1000.0     1100.0\n40  BE24   BE  Belgium      900.0     1300.0      800.0"
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,17 +126,35 @@
     "gdp_long['diff_1415'] = gdp_long['2015']-gdp_long['2014']\n",
     "gdp_long['diff_1516'] = gdp_long['2016']-gdp_long['2015']\n",
     "gdp_long['diff_1617'] = gdp_long['2017']-gdp_long['2016']\n",
-    "gdp_long = gdp_long.drop(columns=['2014','2015','2016','2017']).drop_duplicates()\n",
+    "gdp_long = gdp_long.drop(columns=['2014','2015','2016','2017']).drop_duplicates().dropna()\n",
     "gdp_long.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "gdp_long.to_csv('/Users/maxbehrens/Documents/Msc/Thesis/Data/gdp_data/gdp_time_series.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "nuts2        0\ncode         0\ncountry      0\ndiff_1415    0\ndiff_1516    0\ndiff_1617    0\ndtype: int64"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(gdp_long.isna())"
    ]
   },
   {
