better file names

--- a/NeuralNetTrain/nn_train_vm.ipynb
+++ b/NeuralNetTrain/nn_train_vm.ipynb
@@ -840,176 +840,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Single Training for best relative GDP CNN model\n",
-    "model, test_it, scaler = run_test_harness(\"detailed analysis\",\"missing\",\"adam\",\"mobile_model\",data_type='viirs_night',lr=0.0001,batch_size=8,epochs=1000,target_size=in_shape[0], pred='nuts_diff')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Single Training for best absolute GDP CNN model\n",
-    "model, test_it, scaler = run_test_harness(\"detailed analysis\",\"missing\",\"rmsprob\",\"inception_model\",data_type='viirs_night',lr=0.00001,batch_size=8,epochs=1000,target_size=in_shape[0], pred='nuts_value')"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "dhSKV5pJsrIi"
-   },
+   "metadata": {},
    "source": [
-    "## CNN Optimization Plan\n",
-    "\n",
-    "### Optimizer\n",
-    "\n",
-    "- SGD\n",
-    "- RMSProb\n",
-    "- Adam\n",
-    "- Adamax\n",
-    "\n",
-    "### Overfitting Prevention\n",
-    "\n",
-    "- Dropout\n",
-    "- Regulizer\n",
-    "- Batch Normalisation\n",
-    "\n",
-    "### Layers\n",
-    "\n",
-    "- Very shallow (1 conv, 1 fc)\n",
-    "- Shallow (2 conv, 2 fc)\n",
-    "- Medium shallow\n",
-    "- Transfer\n",
-    "\n",
-    "### Transfer Learning\n",
-    "\n",
-    "- MobileNetV2\n",
-    "- inceptionresnetV2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "mnW5-JkwJg07"
-   },
-   "source": [
-    "## Detailed Result Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "eOGlwNo1jnb0"
-   },
-   "outputs": [],
-   "source": [
-    "# Get Unscaled Predictions for Test Set\n",
-    "test_preds = model.predict_generator(test_it)\n",
-    "test_preds = scaler.inverse_transform(test_preds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "J-JCqCyCMpG4"
-   },
-   "outputs": [],
-   "source": [
-    "# Get Files from Test Set\n",
-    "test_files = test_it.filenames"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Wc0UahTZQIzc"
-   },
-   "outputs": [],
-   "source": [
-    "# Get True Values from Test Set\n",
-    "test_true = test_it.labels\n",
-    "test_true = scaler.inverse_transform(test_true)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 70
-    },
-    "colab_type": "code",
-    "id": "9n9umTy0RLol",
-    "outputId": "15018474-8971-4453-eed3-ddb9d2ebf061"
-   },
-   "outputs": [],
-   "source": [
-    "# Check\n",
-    "print('Predictions Length: '+str(len(test_preds)))\n",
-    "print('Files Length: '+str(len(test_files)))\n",
-    "print('True Values Length: '+str(len(test_true)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 197
-    },
-    "colab_type": "code",
-    "id": "mg5XevQbSTvD",
-    "outputId": "fc9faeb5-9335-472d-9d93-628d6df0cdf5"
-   },
-   "outputs": [],
-   "source": [
-    "# Transform all into a DF\n",
-    "res_dict = {'test_preds':list(test_preds[:,0]), 'test_files':list(test_files), 'test_true_vals':list(test_true)}\n",
-    "result_dat = pd.DataFrame(res_dict)\n",
-    "\n",
-    "# Get Country\n",
-    "result_dat['country'] = result_dat['test_files'].str[:2]\n",
-    "\n",
-    "# Compute Error\n",
-    "result_dat['se'] = (result_dat['test_true_vals']-result_dat['test_preds'])**2\n",
-    "result_dat['abs_error'] = abs(result_dat['test_true_vals']-result_dat['test_preds'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 647
-    },
-    "colab_type": "code",
-    "id": "xSG4OEewUnZj",
-    "outputId": "e2ff9ac7-9337-42b3-a1bd-30e4d0249dfe"
-   },
-   "outputs": [],
-   "source": [
-    "# MAE accuracy per country\n",
-    "result_dat.groupby(['country'])['abs_error'].mean().reset_index().sort_values(['abs_error'])"
+    "## Detailed Prediction Results for best CNNN models"
    ]
   },
   {
@@ -1018,22 +852,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MSE per country\n",
-    "result_dat.groupby(['country'])['se'].mean().reset_index().sort_values(['se'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "WtvC5NFwU0T3"
-   },
-   "outputs": [],
-   "source": [
-    "# Number of images per country\n",
-    "result_dat.groupby(['country']).size()"
+    "# Detailed Prediction Analysis - Relative\n",
+    "i = 0\n",
+    "test_preds = []\n",
+    "test_files = []\n",
+    "test_true = []\n",
+    "\n",
+    "# Repeat 30 times\n",
+    "while i < 30:\n",
+    "\n",
+    "    print('Iteration: '+str(i))\n",
+    "    \n",
+    "    # Train best CNN model for absolute GDP\n",
+    "    model, test_it, scaler = run_test_harness(\"iterated nn\",\"missing\",'rmsprob','inception_model',data_type='viirs_night',lr=0.00001,batch_size=8,epochs=1000,target_size=in_shape[0], pred='nuts_value')\n",
+    "    \n",
+    "    # Rescale results\n",
+    "    temp_preds = model.predict_generator(test_it)\n",
+    "    temp_preds = scaler.inverse_transform(temp_preds)\n",
+    "    temp_files = test_it.filenames\n",
+    "    temp_true = test_it.labels\n",
+    "    temp_true = scaler.inverse_transform(temp_true)\n",
+    "    \n",
+    "    # Add results to lists\n",
+    "    test_preds.extend(list(temp_preds[:,0]))\n",
+    "    test_files.extend(list(temp_files))\n",
+    "    test_true.extend(list(temp_true))\n",
+    "    i = i+1\n",
+    "    \n",
+    "    # Transform all into a DF\n",
+    "    res_dict = {'test_preds':test_preds, 'test_files':test_files, 'test_true_vals':test_true}\n",
+    "    result_dat = pd.DataFrame(res_dict)\n",
+    "\n",
+    "    # Get Country\n",
+    "    result_dat['country'] = result_dat['test_files'].str[:2]\n",
+    "\n",
+    "    # Compute Error\n",
+    "    result_dat['se'] = (result_dat['test_true_vals']-result_dat['test_preds'])**2\n",
+    "    result_dat['abs_error'] = abs(result_dat['test_true_vals']-result_dat['test_preds'])\n",
+    "    \n",
+    "    # Country level statistics\n",
+    "    country_dat = result_dat.groupby(['country']).agg({'se':'mean','abs_error':'mean','test_files':'size'}).reset_index()\n",
+    "    \n",
+    "    # Save\n",
+    "    result_dat.to_csv(\"result_preds_abs.csv\", index=False)\n",
+    "    country_dat.to_csv(\"result_country_abs.csv\", index=False)"
    ]
   },
   {
@@ -1041,7 +903,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Detailed Prediction Analysis - Relative\n",
+    "i = 0\n",
+    "test_preds = []\n",
+    "test_files = []\n",
+    "test_true = []\n",
+    "\n",
+    "# Repeat 30 times\n",
+    "while i < 30:\n",
+    "    print('Iteration: '+str(i))\n",
+    "    \n",
+    "    # Train best model for relative GDP\n",
+    "    model, test_it, scaler = run_test_harness(\"detailed analysis\",\"missing\",\"rmsprob\",\"inception_model\",data_type='viirs_night',lr=0.00001,batch_size=8,epochs=1000,target_size=in_shape[0], pred='nuts_value')\n",
+    "    \n",
+    "    # Rescale results\n",
+    "    temp_preds = model.predict_generator(test_it)\n",
+    "    temp_preds = scaler.inverse_transform(temp_preds)\n",
+    "    temp_files = test_it.filenames\n",
+    "    temp_true = test_it.labels\n",
+    "    temp_true = scaler.inverse_transform(temp_true)\n",
+    "    \n",
+    "    # Save to lists\n",
+    "    test_preds.extend(list(temp_preds[:,0]))\n",
+    "    test_files.extend(list(temp_files))\n",
+    "    test_true.extend(list(temp_true))\n",
+    "    i = i+1\n",
+    "    \n",
+    "    # Transform all into a DF\n",
+    "    res_dict = {'test_preds':test_preds, 'test_files':test_files, 'test_true_vals':test_true}\n",
+    "    result_dat = pd.DataFrame(res_dict)\n",
+    "\n",
+    "    # Get Country\n",
+    "    result_dat['country'] = result_dat['test_files'].str[:2]\n",
+    "\n",
+    "    # Compute Error\n",
+    "    result_dat['se'] = (result_dat['test_true_vals']-result_dat['test_preds'])**2\n",
+    "    result_dat['abs_error'] = abs(result_dat['test_true_vals']-result_dat['test_preds'])\n",
+    "    \n",
+    "    # Compute country stats\n",
+    "    country_dat = result_dat.groupby(['country']).agg({'se':'mean','abs_error':'mean','test_files':'size'}).reset_index()\n",
+    "    \n",
+    "    # Save\n",
+    "    result_dat.to_csv(\"result_preds_abs.csv\", index=False)\n",
+    "    country_dat.to_csv(\"result_country_abs.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
