--- a/NeuralNetTrain/nn_train_vm.ipynb
+++ b/NeuralNetTrain/nn_train_vm.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -58,17 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load GDP Data\n",
-    "y_train = pd.read_csv(\"/home/jupyter/data/enhanced_gdp_data.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -78,7 +68,19 @@
     "id": "b3xDa2R4gohV",
     "outputId": "beb4dbb2-c711-4b4d-fd46-2cc3ff069bf6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/jupyter/data/training/'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-eeb291abe7dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# Get files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mtrain_files\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_path\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0misfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mval_files\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_path\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0misfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mtest_files\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_path\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0misfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/jupyter/data/training/'"
+     ]
+    }
+   ],
    "source": [
     "# Load libraries\n",
     "from os import listdir\n",
@@ -130,8 +132,10 @@
     "# Convert to numpy array\n",
     "X_train = np.array([X_train])\n",
     "X_test = np.array([X_test])\n",
-    "y_train = np.array([y_train])\n",
-    "y_test = np.array([y_test])\n",
+    "y_train_abs = np.array([y_train_abs])\n",
+    "y_test_abs = np.array([y_test_abs])\n",
+    "y_train_diff = np.array([y_train_diff])\n",
+    "y_test_diff = np.array([y_test_diff])\n",
     "\n",
     "# Check\n",
     "print('Train X: ',str(X_train[0][:3]))\n",
@@ -864,7 +868,7 @@
     "    print('Iteration: '+str(i))\n",
     "    \n",
     "    # Train best CNN model for absolute GDP\n",
-    "    model, test_it, scaler = run_test_harness(\"iterated nn\",\"missing\",'rmsprob','inception_model',data_type='viirs_night',lr=0.00001,batch_size=8,epochs=1000,target_size=in_shape[0], pred='nuts_value')\n",
+    "    model, test_it, scaler = run_test_harness(\"iterated nn\",\"missing\",'adam','mobile_model',data_type='viirs_night',lr=0.0001,batch_size=8,epochs=1000,target_size=in_shape[0], pred='nuts_diff')\n",
     "    \n",
     "    # Rescale results\n",
     "    temp_preds = model.predict_generator(test_it)\n",
@@ -894,8 +898,8 @@
     "    country_dat = result_dat.groupby(['country']).agg({'se':'mean','abs_error':'mean','test_files':'size'}).reset_index()\n",
     "    \n",
     "    # Save\n",
-    "    result_dat.to_csv(\"result_preds_abs.csv\", index=False)\n",
-    "    country_dat.to_csv(\"result_country_abs.csv\", index=False)"
+    "    result_dat.to_csv(\"result_preds_relative.csv\", index=False)\n",
+    "    country_dat.to_csv(\"result_country_relative.csv\", index=False)"
    ]
   },
   {
@@ -973,7 +977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
